syntax = "proto3";

package api;
option go_package = "github.com/NEKETSKY/mnemosyne/pkg/api";
import "google/api/annotations.proto"; // https://github.com/googleapis/googleapis
import "protoc-gen-openapiv2/options/annotations.proto"; // https://github.com/grpc-ecosystem/grpc-gateway
import "helloworld/helloworld.proto";

// The greeting service definition.
service Mnemosyne {
  // Sends a greeting
  rpc SayHello (helloworld.HelloRequest) returns (helloworld.HelloReply) {
    option (google.api.http) = {
      post: "/mnemosyne"
      body: "*"
    };
  }
}

option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_swagger) = {
  info: {
    title: "Mnemosyne App API"
    description: "API Server for Mnemosyne application"
    version: "1.0"
    contact: {
      name: "Bar"
    }
  }
  host: "localhost:8000"
  schemes: HTTP
  schemes: HTTPS
  consumes: "application/json"
  produces: "application/json"
  responses: {
    key: "403"
    value: {
      description: "Returned when the user does not have permission to access the resource."
    }
  }
  responses: {
    key: "404"
    value: {
      description: "Returned when the resource does not exist."
      schema: {
        json_schema: {
          type: STRING
        }
      }
    }
  }
  security_definitions: {
    security: {
      key: "BasicAuth"
      value: {
        type: TYPE_BASIC
      }
    }
    security: {
      key: "ApiKeyAuth"
      value: {
        type: TYPE_API_KEY
        in: IN_HEADER
        name: "X-API-Key"
        extensions: {
          key: "x-amazon-apigateway-authtype"
          value {
            string_value: "oauth2"
          }
        }
        extensions: {
          key: "x-amazon-apigateway-authorizer"
          value {
            struct_value {
              fields {
                key: "type"
                value {
                  string_value: "token"
                }
              }
              fields {
                key: "authorizerResultTtlInSeconds"
                value {
                  number_value: 60
                }
              }
            }
          }
        }
      }
    }
  }
  security: {
    security_requirement: {
      key: "BasicAuth"
      value: {}
    }
    security_requirement: {
      key: "ApiKeyAuth"
      value: {}
    }
  }
};